# imx6pull

./: .gitignore  LICENSE  README.md
doc/: 国内SOC开发板选型指南.md  国内嵌入式大厂SOC芯片市场分析报告.md
include/: advanced_face_detector.h
sensor/: BUILD_STATUS.md  CMakeLists.txt  README.md
sensor/api/camera_api/: camera_api.h
sensor/applications/face_recognition_app/: face_recognition_app.cpp
sensor/configs/: system_config.json
sensor/docs/: algorithm_comparison.md  learning.md  requirements.md  system_design.md  technical_research.md  user_manual.md  v4l2_data_flow_analysis.md
sensor/drivers/camera_driver/: camera_driver.c  camera_driver.h
sensor/example/: CMakeLists.txt  README.md  haarcascade_eye.xml  haarcascade_frontalface_alt.xml  haarcascade_frontalface_alt2.xml  haarcascade_frontalface_default.xml  haarcascade_smile.xml  simple_build.sh  simple_demo.cpp  simple_face_detection_demo  test_build.sh
sensor/example/build_test/: AdvancedFaceDetectionDemo  CameraTest  FaceDetectionDemo  SimpleAdvancedTest
sensor/example/config/: default_config.json
sensor/example/include/: advanced_face_detector.h  camera_capture.h  config_manager.h  face_detection_demo.h  face_detector.h  performance_monitor.h
sensor/example/scripts/: build.sh  install_dependencies.sh  setup_opencv_data.sh
sensor/example/src/: advanced_demo.cpp  advanced_face_detector.cpp  camera_capture.cpp  camera_test.cpp  config_manager.cpp  face_detection_demo.cpp  face_detector.cpp  main.cpp  performance_monitor.cpp  simple_advanced_test.cpp
sensor/middleware/face_recognition/: face_engine.h
sensor/scripts/: build.sh
sensor/tests/: camera_test.c
src/: advanced_demo.cpp  advanced_face_detector.cpp
wifi/: CMakeLists.txt
wifi/docs/: WiFi蓝牙协议栈技术详解.md  WiFi蓝牙基础架构功能拆解.md  WiFi蓝牙模块应用案例.md  WiFi蓝牙深度实践项目规划.md  国内嵌入式大厂WiFi蓝牙模块选型指南.md  系统设计.md  蓝牙WiFi绑定流程设计.md  蓝牙绑定后安全控制机制.md  需求分析.md
wifi/src/drivers/bluetooth/: bluetooth_driver.h
wifi/src/drivers/wifi/: wifi_driver.h
